# cv-optim-agent

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  test_analyze.py
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  session.py
backend/app/agents/: graph.py  nodes.py  state.py  tools.py
backend/app/routers/: api.py
backend/app/utils/: exporter.py  parser.py
docs/: api.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js  store.js
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/views/: StepResult.vue  StepReview.vue  StepUpload.vue
